--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <div class="nav-container">
   <div class="nav navbar-nav navbar-left">
     <div class="navbar-header">
-      <a href="/" class="navbar-brand">XXX</a>
+      <a href="/" class="navbar-brand">Quaan
+      </a>
     </div>
     
 
